--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -141,12 +141,14 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="myFunction.h" />
     <ClInclude Include="RenderableObject.h" />
+    <ClInclude Include="SplittableObject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MiracleBoys_SDL.cpp" />
     <ClCompile Include="RenderableObject.cpp" />
+    <ClCompile Include="SplittableObject.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
