--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj.filters
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj.filters
@@ -17,7 +17,7 @@
     <Filter Include="GameObject\RenderableObject">
       <UniqueIdentifier>{926e0faa-e7fc-4c99-953a-3f671ecc3dbc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameObject\RenderableObject\SplitableObject">
+    <Filter Include="GameObject\RenderableObject\SplittableObject">
       <UniqueIdentifier>{9346afa2-8950-4836-a530-bf08bad915b6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -40,6 +40,9 @@
     <ClInclude Include="RenderableObject.h">
       <Filter>GameObject\RenderableObject</Filter>
     </ClInclude>
+    <ClInclude Include="SplittableObject.h">
+      <Filter>GameObject\RenderableObject\SplittableObject</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -49,5 +52,6 @@
     <ClCompile Include="RenderableObject.cpp">
       <Filter>GameObject\RenderableObject</Filter>
     </ClCompile>
+    <ClCompile Include="SplittableObject.cpp" />
   </ItemGroup>
 </Project>
