--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -138,14 +138,18 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="EventHandler.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="myFunction.h" />
     <ClInclude Include="RenderableObject.h" />
+    <ClInclude Include="Singletone.h" />
     <ClInclude Include="SplittableObject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EventHandler.cpp" />
     <ClCompile Include="MiracleBoys_SDL.cpp" />
     <ClCompile Include="RenderableObject.cpp" />
     <ClCompile Include="SplittableObject.cpp" />
