--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -138,21 +138,28 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="FrameSkip.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="myFunction.h" />
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Singletone.h" />
     <ClInclude Include="SplittableObject.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TimeManager.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="FrameSkip.cpp" />
     <ClCompile Include="MiracleBoys_SDL.cpp" />
     <ClCompile Include="myFunction.cpp" />
     <ClCompile Include="RenderableObject.cpp" />
@@ -163,6 +170,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="System.cpp" />
+    <ClCompile Include="TimeManager.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
