--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="FrameSkip.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="IScene.h" />
     <ClInclude Include="myFunction.h" />
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="Singletone.h" />
@@ -172,7 +173,6 @@
     </ClCompile>
     <ClCompile Include="System.cpp" />
     <ClCompile Include="TimeManager.cpp" />
-    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
