플로팅창 이미지와 클래스 완료

--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="FloatImage.h" />
     <ClInclude Include="FrameSkip.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="IScene.h" />
