--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -148,8 +148,10 @@
     <ClInclude Include="IScene.h" />
     <ClInclude Include="myFunction.h" />
     <ClInclude Include="RenderableObject.h" />
+    <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Singletone.h" />
     <ClInclude Include="SplittableObject.h" />
+    <ClInclude Include="StartScene.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="targetver.h" />
@@ -166,6 +168,7 @@
     <ClCompile Include="myFunction.cpp" />
     <ClCompile Include="RenderableObject.cpp" />
     <ClCompile Include="SplittableObject.cpp" />
+    <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
