--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -88,6 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,7 +147,9 @@
     <ClInclude Include="FrameSkip.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="IScene.h" />
+    <ClInclude Include="MusicManager.h" />
     <ClInclude Include="myFunction.h" />
+    <ClInclude Include="PlayScene.h" />
     <ClInclude Include="RenderableObject.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Singletone.h" />
