싱글톤 클래스 MusicManager Play 메서드 개선

--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj.filters
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj.filters
@@ -184,6 +184,8 @@
     <ClCompile Include="ListButton.cpp">
       <Filter>GameObject\RenderableObject\SplittableObject\ListButton</Filter>
     </ClCompile>
-    <ClCompile Include="PlayScene.cpp" />
+    <ClCompile Include="PlayScene.cpp">
+      <Filter>Scene\PlayScene</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
