--- a/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
+++ b/MiracleBoys/MiracleBoys_SDL/MiracleBoys_SDL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{6565F764-2077-4DB0-A0B2-9BD64FDEEA36}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MiracleBoys_SDL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -37,7 +37,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
